<resources>
    <string name="app_name">Acutis Club</string>
    <string name="acutis_club">Acutis Club</string>
    <string name="sign_up">Sign up</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="forget_password">Forget Password</string>
    <string name="login">Login</string>
    <string name="new_user_sign_up">New user, Sign up</string>
    <string name="empty_string" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="project">Project</string>
    <string name="notice">Notice Board</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="logout">Logout</string>
    <string name="attendance">Attendance</string>
    <string name="leetcode_profile">LeetCode profile</string>
    <string name="github_profile">GitHub profile</string>
    <string name="hackerrank_profile">HackerRank profile</string>
    <string name="search">Search</string>
    <string name="project_description">Project description</string>
    <string name="project_name">Project Name</string>
</resources>