<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/white">


    <ImageView
        android:id="@+id/acutisName"
        android:layout_width="821dp"
        android:layout_height="460dp"
        android:layout_gravity="right"
        android:layout_marginBottom="508dp"
        android:src="@drawable/img_acutis"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.779" />

    <androidx.cardview.widget.CardView
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginHorizontal="15dp"
        android:elevation="5dp"
        app:cardCornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.591">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_gradient_profile_page">

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/bg_custon_input"
                android:drawableLeft="@drawable/icon_email"
                android:drawablePadding="10dp"
                android:elevation="10dp"
                android:hint="@string/email"
                android:paddingHorizontal="10dp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.123" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/bg_custon_input"
                android:drawableLeft="@drawable/icon_password"
                android:drawablePadding="10dp"
                android:elevation="10dp"
                android:hint="@string/password"
                android:paddingHorizontal="10dp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.38" />

            <TextView
                android:id="@+id/forgetPasswordButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/forget_password"
                android:textColor="#D50000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.105"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.531" />

            <TextView
                android:id="@+id/loginButton"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_logout_button"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="#00072E"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.693" />

            <TextView
                android:id="@+id/signUpButton"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_logout_button"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textColor="#00072E"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.945" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>